--- a/IndustrialSafetyDS/Industrial_Accident_Causal_Analysis.ipynb
+++ b/IndustrialSafetyDS/Industrial_Accident_Causal_Analysis.ipynb
@@ -136,7 +136,7 @@
       "source": [
         "df = pd.read_csv(\"https://raw.githubusercontent.com/gauravpks/ml-repo/master/IndustrialSafetyDS/industrial_safety.csv\")"
       ],
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -148,12 +148,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 162
         },
-        "outputId": "39ad8024-bb06-4bf3-a7ed-b4984b4d403a"
+        "outputId": "be776d20-f12a-4936-c92c-70f8d66de1fe"
       },
       "source": [
         "df.head(2)"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,14 +177,14 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Date</th>\n",
-              "      <th>Country</th>\n",
+              "      <th>Data</th>\n",
+              "      <th>Countries</th>\n",
               "      <th>Local</th>\n",
               "      <th>Industry Sector</th>\n",
               "      <th>Accident Level</th>\n",
               "      <th>Potential Accident Level</th>\n",
               "      <th>Gender</th>\n",
-              "      <th>Employee type</th>\n",
+              "      <th>Employee or Third Party</th>\n",
               "      <th>Critical Risk</th>\n",
               "      <th>Description</th>\n",
               "    </tr>\n",
@@ -221,7 +221,7 @@
               "</div>"
             ],
             "text/plain": [
-              "               Date  ...                                        Description\n",
+              "               Data  ...                                        Description\n",
               "0  01-01-2016 00:00  ...  While removing the drill rod of the Jumbo 08 f...\n",
               "1  02-01-2016 00:00  ...  During the activation of a sodium sulphide pum...\n",
               "\n",
@@ -231,7 +231,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 17
         }
       ]
     }
