--- a/ANN/ANN_MNIST_Classification.ipynb
+++ b/ANN/ANN_MNIST_Classification.ipynb
@@ -22,19 +22,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gauravpks/dl-repo/blob/master/TF2_0_ANN_MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gauravpks/dl-repo/blob/master/ANN/ANN_MNIST_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "k1SrotGwaoB0",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2b88b46-7071-4649-db00-6b1a4bbf561f"
+        "outputId": "223eeda6-4006-45de-96a9-00b03bab2083"
       },
       "source": [
         "# Install TensorFlow\n",
@@ -48,15 +46,17 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[K     |████████████████████████████████| 348.9MB 52kB/s \n",
-            "\u001b[K     |████████████████████████████████| 3.1MB 49.1MB/s \n",
-            "\u001b[K     |████████████████████████████████| 501kB 54.6MB/s \n",
-            "\u001b[?25h2.0.0-beta1\n"
+            "`%tensorflow_version` only switches the major version: 1.x or 2.x.\n",
+            "You set: `2.x  # Colab only.`. This will be interpreted as: `2.x`.\n",
+            "\n",
+            "\n",
+            "TensorFlow 2.x selected.\n",
+            "2.4.0\n"
           ],
           "name": "stdout"
         }
@@ -66,7 +66,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "1J1kPjvrazt6",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -97,9 +96,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VEHJi0xXa2ar",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VEHJi0xXa2ar"
       },
       "source": [
         "# Build the model\n",
@@ -116,9 +113,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hdXbXw92a9BA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "hdXbXw92a9BA"
       },
       "source": [
         "# Compile the model\n",
@@ -133,7 +128,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "53vcyL3abEMk",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
@@ -189,7 +183,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "YmuEUz_abG2G",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -235,7 +228,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "OZ_O_sQwbPpi",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -280,7 +272,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "fKA7MzMMbS4f",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -307,7 +298,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "pcSvHrAFbVR4",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 498
@@ -400,7 +390,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "QyTLFozCbWtd",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281
