--- a/ANN/Introduction.ipynb
+++ b/ANN/Introduction.ipynb
@@ -650,10 +650,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-p_ot_vO1nI4"
+      },
+      "source": [
+        "https://ml-cheatsheet.readthedocs.io/en/latest/activation_functions.html"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yVNlkUhi_YYW"
       },
       "source": [
-        "##Loss Function"
+        "##Loss Function "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2x-ZzPmp1zkg"
+      },
+      "source": [
+        "##Optimizers"
       ]
     },
     {
