--- a/ANN/ANN_Regression.ipynb
+++ b/ANN/ANN_Regression.ipynb
@@ -22,19 +22,26 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gauravpks/dl-repo/blob/master/TF2_0_ANN_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gauravpks/dl-repo/blob/master/ANN/ANN_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zzfSorgwc7jP"
+      },
+      "source": [
+        "#Regression using Sequential API"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "PkMbogrAOFzD",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9f407371-a6b3-4bb9-f359-ff1ea4825b92"
+        "outputId": "05d1994f-d408-46f4-fbd7-e233f677df66"
       },
       "source": [
         "# Install TensorFlow\n",
@@ -48,12 +55,17 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2.0.0-beta1\n"
+            "`%tensorflow_version` only switches the major version: 1.x or 2.x.\n",
+            "You set: `2.x  # Colab only.`. This will be interpreted as: `2.x`.\n",
+            "\n",
+            "\n",
+            "TensorFlow 2.x selected.\n",
+            "2.4.0\n"
           ],
           "name": "stdout"
         }
@@ -62,9 +74,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vSwdweV3OdJZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vSwdweV3OdJZ"
       },
       "source": [
         "# Other imports\n",
@@ -78,9 +88,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iNB0vrXdOHqx",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iNB0vrXdOHqx"
       },
       "source": [
         "# Make the dataset\n",
@@ -94,8 +102,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "y4Gg6HW_ZegD",
-        "colab_type": "text"
+        "id": "y4Gg6HW_ZegD"
       },
       "source": [
         "This implements the function:\n",
@@ -107,7 +114,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "J2U_eRm0Ob95",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
@@ -152,9 +158,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HOiN3hFXPBRR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "HOiN3hFXPBRR"
       },
       "source": [
         "# Build the model\n",
@@ -170,7 +174,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "8Ja7vQTPPjrb",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -398,7 +401,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "2pKxxsJ1P-me",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -441,7 +443,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "n5zfwL1EQWVk",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
@@ -482,7 +483,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "fYK-ZuLJEBra",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
