--- a/ANN/ANN_Regression.ipynb
+++ b/ANN/ANN_Regression.ipynb
@@ -55,7 +55,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
         "import matplotlib.pyplot as plt\n",
         "from mpl_toolkits.mplot3d import Axes3D"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
         "X = np.random.random((N, 2)) * 6 - 3 # uniformly distributed between (-3, +3)\n",
         "Y = np.cos(2*X[:,0]) + np.cos(3*X[:,1])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "ax.scatter(X[:,0], X[:,1], Y)\n",
         "# plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +168,7 @@
         "  tf.keras.layers.Dense(1)\n",
         "])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "model.compile(optimizer=opt, loss='mse')\n",
         "r = model.fit(X, Y, epochs=100)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +444,7 @@
         "# Plot the loss\n",
         "plt.plot(r.history['loss'], label='loss')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +520,7 @@
         "ax.plot_trisurf(Xgrid[:,0], Xgrid[:,1], Yhat, linewidth=0.2, antialiased=True)\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -549,7 +549,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QBc89ZK4eBrU"
+        "id": "QBc89ZK4eBrU",
+        "outputId": "7ed3ee3e-5684-40e7-f10c-e4f9f8d9b250",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from sklearn.datasets import fetch_california_housing\r\n",
@@ -566,22 +570,30 @@
         "X_valid = scaler.transform(X_valid)\r\n",
         "X_test = scaler.transform(X_test)"
       ],
-      "execution_count": 23,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to /root/scikit_learn_data\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "3jGDUAlHYOY2",
-        "outputId": "2141c38e-dcb2-4f07-ad2b-8379f43400a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2141c38e-dcb2-4f07-ad2b-8379f43400a8"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +618,7 @@
         "np.random.seed(42)\r\n",
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -619,7 +631,7 @@
         "from tensorflow import keras\r\n",
         "import pandas as pd"
       ],
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -629,7 +641,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CcaCnSGYeLEE",
-        "outputId": "7cdbadcd-5170-43eb-e942-4dae6334b288"
+        "outputId": "3e843f55-2f3d-4a76-da0e-1fbd5cfe0b5e"
       },
       "source": [
         "model = keras.models.Sequential([\r\n",
@@ -639,51 +651,51 @@
         "model.compile(loss=\"mean_squared_error\", optimizer=keras.optimizers.SGD(lr=1e-3))\r\n",
         "history = model.fit(X_train, y_train, epochs=20, validation_data=(X_valid, y_valid))\r\n"
       ],
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 3.6779 - val_loss: 0.9873\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 3.6419 - val_loss: 6.0668\n",
             "Epoch 2/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.7445 - val_loss: 0.6552\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.8332 - val_loss: 0.7213\n",
             "Epoch 3/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.6593 - val_loss: 0.6199\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.7099 - val_loss: 0.6245\n",
             "Epoch 4/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.6153 - val_loss: 0.5724\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.6739 - val_loss: 0.6111\n",
             "Epoch 5/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.5689 - val_loss: 0.5425\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.6283 - val_loss: 0.5648\n",
             "Epoch 6/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.5412 - val_loss: 0.5197\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.5886 - val_loss: 0.5424\n",
             "Epoch 7/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.5399 - val_loss: 0.5139\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.5788 - val_loss: 0.5378\n",
             "Epoch 8/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.5117 - val_loss: 0.4828\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.5540 - val_loss: 0.5297\n",
             "Epoch 9/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4964 - val_loss: 0.4691\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.5346 - val_loss: 0.4853\n",
             "Epoch 10/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4829 - val_loss: 0.4584\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.5285 - val_loss: 0.4700\n",
             "Epoch 11/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4691 - val_loss: 0.4437\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4999 - val_loss: 0.4900\n",
             "Epoch 12/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4582 - val_loss: 0.4364\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.5000 - val_loss: 0.4608\n",
             "Epoch 13/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4589 - val_loss: 0.4271\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4609 - val_loss: 0.4466\n",
             "Epoch 14/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4513 - val_loss: 0.4223\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4663 - val_loss: 0.4379\n",
             "Epoch 15/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4468 - val_loss: 0.4157\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4639 - val_loss: 0.4784\n",
             "Epoch 16/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4521 - val_loss: 0.4108\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4298 - val_loss: 0.4407\n",
             "Epoch 17/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4342 - val_loss: 0.4083\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4428 - val_loss: 0.4428\n",
             "Epoch 18/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4371 - val_loss: 0.4034\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4242 - val_loss: 0.4532\n",
             "Epoch 19/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4158 - val_loss: 0.3989\n",
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4452 - val_loss: 0.4474\n",
             "Epoch 20/20\n",
-            "363/363 [==============================] - 1s 2ms/step - loss: 0.4128 - val_loss: 0.4060\n"
+            "363/363 [==============================] - 0s 1ms/step - loss: 0.4440 - val_loss: 0.4527\n"
           ],
           "name": "stdout"
         }
@@ -693,17 +705,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "p-s0SYW_c9u8",
-        "outputId": "d7fea935-2c21-46fc-d12d-44a641d050e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d7fea935-2c21-46fc-d12d-44a641d050e1"
       },
       "source": [
         "mse_test = model.evaluate(X_test, y_test)\r\n",
         "X_new = X_test[:3]\r\n",
         "y_pred = model.predict(X_new)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +739,7 @@
       "source": [
         "history.history"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,7 +810,7 @@
         "plt.gca().set_ylim(0, 1)\r\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -812,6 +824,47 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l2LdFPrj92s7"
+      },
+      "source": [
+        "y_test_predict = model.predict(X_test)"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8XEIJq-f90bd",
+        "outputId": "bf10b61b-7822-40ac-ff1d-ecc1e5abe530",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn import metrics\r\n",
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_test_predict))  \r\n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_test_predict))  \r\n",
+        "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_test_predict)))\r\n",
+        "print('R2:', metrics.r2_score(y_test, y_test_predict))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mean Absolute Error: 0.46535816519333595\n",
+            "Mean Squared Error: 0.4224106588752154\n",
+            "Root Mean Squared Error: 0.6499312724244121\n",
+            "R2: 0.6807701940392124\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -844,7 +897,7 @@
         "X_new = X_test[:3]\r\n",
         "y_pred = model.predict(X_new)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,11 +953,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "8Ubvzx7Iau4F",
-        "outputId": "5fc6fc7f-d80c-4b48-c45f-4be6227fbce0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "outputId": "5fc6fc7f-d80c-4b48-c45f-4be6227fbce0"
       },
       "source": [
         "plt.plot(pd.DataFrame(history.history))\r\n",
@@ -912,7 +965,7 @@
         "plt.gca().set_ylim(0, 1)\r\n",
         "plt.show()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
