--- a/ANN/HyperparameterTuning.ipynb
+++ b/ANN/HyperparameterTuning.ipynb
@@ -6,6 +6,7 @@
       "name": "TF2.0 ANN Regression",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,12 +174,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tYZSqfP13kj5",
-        "outputId": "fa15a56b-1261-42e0-ae4e-e47ca8534754",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "tYZSqfP13kj5",
+        "outputId": "fa15a56b-1261-42e0-ae4e-e47ca8534754"
       },
       "source": [
         "housing_df = pd.DataFrame(housing.data, columns=housing.feature_names)\r\n",
@@ -984,11 +985,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "110rxBCoxCxe",
-        "outputId": "04d41e09-19d1-49aa-e9f1-a9f19d68166f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "110rxBCoxCxe",
+        "outputId": "04d41e09-19d1-49aa-e9f1-a9f19d68166f"
       },
       "source": [
         "tuner.search(X_train, y_train,\r\n",
@@ -1025,11 +1026,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p3QC-aF-1gBa",
-        "outputId": "82c3d76a-d72b-47dd-d0f7-f9bfc9c68e14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p3QC-aF-1gBa",
+        "outputId": "82c3d76a-d72b-47dd-d0f7-f9bfc9c68e14"
       },
       "source": [
         "# Build the model with the optimal hyperparameters and train it on the data\r\n",
@@ -1089,12 +1090,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ewZVq7km1vDu",
-        "outputId": "e3aef29a-77a6-4c8d-9ede-9cdd5e380e84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "ewZVq7km1vDu",
+        "outputId": "e3aef29a-77a6-4c8d-9ede-9cdd5e380e84"
       },
       "source": [
         "plt.plot(pd.DataFrame(history.history))\r\n",
@@ -1122,11 +1123,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S1qaZikT14Bs",
-        "outputId": "2b0091cd-cfeb-46e5-f52a-b163f0f8d8c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S1qaZikT14Bs",
+        "outputId": "2b0091cd-cfeb-46e5-f52a-b163f0f8d8c3"
       },
       "source": [
         "model.evaluate(X_test,y_test)"
@@ -1168,11 +1169,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wjGNu3mZ2QTB",
-        "outputId": "f9527ce2-277f-4ab2-8cf8-7a32b24f41a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wjGNu3mZ2QTB",
+        "outputId": "f9527ce2-277f-4ab2-8cf8-7a32b24f41a7"
       },
       "source": [
         "from sklearn import metrics\r\n",
@@ -1192,6 +1193,134 @@
             "R2: 0.7810913165226734\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "acOexl1C_HB7"
+      },
+      "source": [
+        "#Using Grid SearchCV"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xe6hSEX3_Jij"
+      },
+      "source": [
+        "from keras.wrappers.scikit_learn import KerasRegressor\r\n",
+        "from sklearn.model_selection import GridSearchCV"
+      ],
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ERqqpJAB_TVY"
+      },
+      "source": [
+        "def create_model(layers, activation):\r\n",
+        "    model = Sequential()\r\n",
+        "    for i, nodes in enumerate(layers):\r\n",
+        "        if i==0:\r\n",
+        "            model.add(Dense(nodes,input_dim=X_train.shape[1]))\r\n",
+        "            model.add(Activation(activation))\r\n",
+        "        else:\r\n",
+        "            model.add(Dense(nodes))\r\n",
+        "            model.add(Activation(activation))\r\n",
+        "    model.add(Dense(1)) # Note: no activation beyond this point\r\n",
+        "    \r\n",
+        "    model.compile(optimizer='adam', loss='mean_absolute_error',metrics=['mean_absolute_error'])\r\n",
+        "    return model\r\n",
+        "    \r\n",
+        "model = KerasRegressor(build_fn=create_model, verbose=0)"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IpgSh5OwASkM",
+        "outputId": "78edaf3f-eac8-4e0d-a47c-0e0196d96999",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.wrappers.scikit_learn.KerasRegressor at 0x7f5b48ccf5f8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nyGWNAc7ATCE"
+      },
+      "source": [
+        "layers = [[20], [40, 20], [45, 30, 15]]\r\n",
+        "activations = ['relu', 'selu']\r\n",
+        "param_grid = dict(layers=layers, activation=activations, batch_size = [128, 256], epochs=[30])\r\n",
+        "grid = GridSearchCV(estimator=model, param_grid=param_grid)"
+      ],
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4k_C9hgjA4Q7",
+        "outputId": "1f6178b1-4142-4548-fd75-ce0d2ff34342",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 411
+        }
+      },
+      "source": [
+        "grid_result = grid.fit(X_train, y_train)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+            "NameError: name 'Sequential' is not defined\n",
+            "\n",
+            "  FitFailedWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-60-af7ba4e48606>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_search.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, groups, **fit_params)\u001b[0m\n\u001b[1;32m    734\u001b[0m             \u001b[0;31m# of the params are estimators as well.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    735\u001b[0m             self.best_estimator_ = clone(clone(base_estimator).set_params(\n\u001b[0;32m--> 736\u001b[0;31m                 **self.best_params_))\n\u001b[0m\u001b[1;32m    737\u001b[0m             \u001b[0mrefit_start_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    738\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36mclone\u001b[0;34m(estimator, safe)\u001b[0m\n\u001b[1;32m     80\u001b[0m             raise RuntimeError('Cannot clone object %s, as the constructor '\n\u001b[1;32m     81\u001b[0m                                \u001b[0;34m'either does not set or modifies parameter %s'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m                                (estimator, name))\n\u001b[0m\u001b[1;32m     83\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew_object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Cannot clone object <tensorflow.python.keras.wrappers.scikit_learn.KerasRegressor object at 0x7f5b48cde4a8>, as the constructor either does not set or modifies parameter layers"
+          ]
         }
       ]
     }
