--- a/ANN/HyperparameterTuning.ipynb
+++ b/ANN/HyperparameterTuning.ipynb
@@ -1277,7 +1277,7 @@
         "    model.compile(optimizer='adam', loss='mean_absolute_error',metrics=['mean_absolute_error'])\r\n",
         "    return model\r\n",
         "    \r\n",
-        "model = KerasRegressor(build_fn=create_model, verbose=0)"
+        "model = KerasRegressor(build_fn=create_model, verbose=1)"
       ],
       "execution_count": 35,
       "outputs": []
@@ -1294,7 +1294,7 @@
         "param_grid = dict(layers=layers, activation=activations, batch_size = [128, 256], epochs=[30])\r\n",
         "grid = GridSearchCV(estimator=model, param_grid=param_grid)"
       ],
-      "execution_count": 36,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1305,7 +1305,7 @@
       "source": [
         "grid_result = grid.fit(X_train, y_train)"
       ],
-      "execution_count": 37,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1315,28 +1315,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FxD_dquwtedc",
-        "outputId": "4f1aaa6c-ae03-4ae2-e09d-9a77ef55c8e0"
+        "outputId": "04290e71-1f60-4ae9-a7e5-9353971c40ff"
       },
       "source": [
         "[grid_result.best_score_,grid_result.best_params_]"
       ],
-      "execution_count": 38,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[-0.3720025420188904,\n",
+              "[-0.3635008752346039,\n",
               " {'activation': 'relu',\n",
               "  'batch_size': 128,\n",
               "  'epochs': 30,\n",
-              "  'layers': (45, 30, 15)}]"
+              "  'layers': (70, 45, 15, 5)}]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 43
         }
       ]
     },
