--- a/CNN/CNNIntro.ipynb
+++ b/CNN/CNNIntro.ipynb
@@ -212,7 +212,7 @@
         "id": "6hus9CvErPWR"
       },
       "source": [
-        "**Max Pooling & Avg Pooling.. Max Pooling is used Mainly**"
+        "**Max Pooling, Min Pooling & Avg Pooling.. Max Pooling is used Mainly**"
       ]
     },
     {
