--- a/CNN/CNNImplementation.ipynb
+++ b/CNN/CNNImplementation.ipynb
@@ -902,7 +902,7 @@
         "from tensorflow.keras import layers\r\n",
         "from tensorflow.keras.models import Sequential"
       ],
-      "execution_count": 34,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -921,7 +921,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d58n7kv-DErp",
-        "outputId": "7e419bf6-7a04-4c19-eb3f-f823d8fb81db"
+        "outputId": "83568411-43bf-401a-8614-2fede65a0fd9"
       },
       "source": [
         "import pathlib\r\n",
@@ -929,7 +929,7 @@
         "data_dir = tf.keras.utils.get_file('flower_photos', origin=dataset_url, untar=True)\r\n",
         "data_dir = pathlib.Path(data_dir)"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,12 +948,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bDb8U0WtDJBY",
-        "outputId": "4ba63ef0-615b-4edf-b8d6-a07b2e519e41"
+        "outputId": "14e6ba25-28bc-4edb-a1c8-dd06d985e244"
       },
       "source": [
         "data_dir"
       ],
-      "execution_count": 37,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -965,7 +965,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 14
         }
       ]
     },
@@ -999,13 +999,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4gW8q9n6DRvq",
-        "outputId": "bbe92978-3116-4448-cf54-ff205ab39dd3"
+        "outputId": "e55379bc-5ee3-4def-dc3e-03c9052a1959"
       },
       "source": [
         "image_count = len(list(data_dir.glob('*/*.jpg')))\r\n",
         "print(image_count)"
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1951,6 +1951,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9iCgo77ATVtc"
+      },
+      "source": [
+        "?train_datagen.flow_from_directory"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "EX0w2V7rw52i"
       },
       "source": [
@@ -1976,6 +1987,52 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "NyEFc4OVRnWF",
+        "outputId": "be3268b9-37d6-42f5-97a9-3ec3098514ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_datagen = tf.keras.preprocessing.image.ImageDataGenerator(\r\n",
+        "        rescale=1./255,\r\n",
+        "        shear_range=0.2,\r\n",
+        "        zoom_range=0.2,\r\n",
+        "        horizontal_flip=True)\r\n",
+        "\r\n",
+        "test_datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\r\n",
+        "\r\n",
+        "train_generator = train_datagen.flow_from_directory(\r\n",
+        "        data_dir,\r\n",
+        "        target_size=(150, 150),\r\n",
+        "        subset=\"training\",\r\n",
+        "        seed=123,\r\n",
+        "        batch_size=32,\r\n",
+        "        class_mode='binary')\r\n",
+        "\r\n",
+        "validation_generator = test_datagen.flow_from_directory(\r\n",
+        "        data_dir,\r\n",
+        "        target_size=(150, 150),\r\n",
+        "        batch_size=32,\r\n",
+        "        seed=123,\r\n",
+        "        subset=\"validation\",\r\n",
+        "        class_mode='binary')"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 3670 images belonging to 5 classes.\n",
+            "Found 0 images belonging to 5 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Ui7g5BE7xEN8"
       },
       "source": [
@@ -1989,11 +2046,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PHOLdgFQzQQ3",
-        "outputId": "9d7c0f44-e183-4cee-acb3-1214055ca460",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PHOLdgFQzQQ3",
+        "outputId": "a622309e-0582-4dab-a583-f71b1387c565"
       },
       "source": [
         "for image_batch, labels_batch in train_ds:\r\n",
@@ -2001,13 +2058,13 @@
         "  print(labels_batch.shape)\r\n",
         "  break"
       ],
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(32, 180, 180, 3)\n",
-            "(32,)\n"
+            "(2936, 180, 180, 3)\n",
+            "(2936,)\n"
           ],
           "name": "stdout"
         }
@@ -2016,11 +2073,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oSBu-JBbzymy",
-        "outputId": "a50028c5-45c1-497b-a835-48ec9a67d6f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oSBu-JBbzymy",
+        "outputId": "a50028c5-45c1-497b-a835-48ec9a67d6f4"
       },
       "source": [
         "for val_image_batch, val_labels_batch in val_ds:\r\n",
@@ -2043,19 +2100,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9X9qKP_EfYIa",
-        "outputId": "e4d21275-53b8-482e-f6e9-34cf805af22c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9X9qKP_EfYIa",
+        "outputId": "e4d21275-53b8-482e-f6e9-34cf805af22c"
       },
       "source": [
         "# Fit with data augmentation\r\n",
         "# Note: if you run this AFTER calling the previous model.fit(), it will CONTINUE training where it left off\r\n",
         "batch_size = 32\r\n",
         "data_generator = tf.keras.preprocessing.image.ImageDataGenerator(width_shift_range=0.1, height_shift_range=0.1, horizontal_flip=True)\r\n",
-        "train_generator = data_generator.flow(image_batch, labels_batch)\r\n",
-        "model.fit(train_generator, validation_data=(val_image_batch,val_labels_batch),  epochs=50)"
+        "train_generator = data_generator.flow(x_train, y_train, batch_size)\r\n",
+        "steps_per_epoch = x_train.shape[0] // batch_size\r\n",
+        "model.fit(train_generator, validation_data=(x_test, y_test), steps_per_epoch=steps_per_epoch, epochs=50)"
       ],
       "execution_count": 27,
       "outputs": [
