--- a/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
+++ b/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
@@ -6,7 +6,7 @@
       "name": "ARIMA-And-Seasonal-ARIMA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWsn45avzA794Nxf7DPr5Y",
+      "authorship_tag": "ABX9TyPJUVEpGZPHstY+IyxEXnNg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -957,9 +957,9 @@
         "* For an MA model, the theoretical PACF does not shut off, but instead tapers toward 0 in some manner. A clearer pattern for an MA model is in the ACF. The ACF will have non-zero autocorrelations only at lags involved in the model.\r\n",
         "\r\n",
         "**p,d,q p**\r\n",
-        "1. p - AR Model Lag\r\n",
-        "2. d - differencing \r\n",
-        "3. q - Moving Average Lag\r\n"
+        "1. p - AR Model Lag/order\r\n",
+        "2. d - order of differencing \r\n",
+        "3. q - Moving Average Lag/order\r\n"
       ]
     },
     {
