--- a/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
+++ b/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
@@ -6,7 +6,7 @@
       "name": "ARIMA-And-Seasonal-ARIMA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPJUVEpGZPHstY+IyxEXnNg",
+      "authorship_tag": "ABX9TyO/FIxuNqIicdpCZEr3Bq44",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -958,7 +958,7 @@
         "\r\n",
         "**p,d,q p**\r\n",
         "1. p - AR Model Lag/order\r\n",
-        "2. d - order of differencing \r\n",
+        "2. d - order of differencing to make time series stationary\r\n",
         "3. q - Moving Average Lag/order\r\n"
       ]
     },
