--- a/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
+++ b/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
@@ -6,7 +6,7 @@
       "name": "ARIMA-And-Seasonal-ARIMA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/FIxuNqIicdpCZEr3Bq44",
+      "authorship_tag": "ABX9TyPCroJ/J8+vQHU1nl88XJ2f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1031,6 +1031,111 @@
       ],
       "execution_count": 44,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 592
+        },
+        "id": "M5y4VeYPpf_i",
+        "outputId": "42054276-ecab-46db-cca0-5a2dc2a54c2e"
+      },
+      "source": [
+        "!pip install pmdarima"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting pmdarima\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c9/d7/61af1897449638822f97c8b43ef0c2fce2ec68a6cda9a43ebbbdd12b967c/pmdarima-1.8.0-cp36-cp36m-manylinux1_x86_64.whl (1.5MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.5MB 5.4MB/s \n",
+            "\u001b[?25hCollecting Cython<0.29.18,>=0.29\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e7/d7/510ddef0248f3e1e91f9cc7e31c0f35f8954d0af92c5c3fd4c853e859ebe/Cython-0.29.17-cp36-cp36m-manylinux1_x86_64.whl (2.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.1MB 15.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pandas>=0.19 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.1.5)\n",
+            "Collecting statsmodels!=0.12.0,>=0.11\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/0d/7b/c17815648dc31396af865b9c6627cc3f95705954e30f61106795361c39ee/statsmodels-0.12.2-cp36-cp36m-manylinux1_x86_64.whl (9.5MB)\n",
+            "\u001b[K     |████████████████████████████████| 9.5MB 29.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.24.3)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.0.0)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (1.19.5)\n",
+            "Requirement already satisfied: scikit-learn>=0.22 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (0.22.2.post1)\n",
+            "Requirement already satisfied: setuptools!=50.0.0,>=38.6.0 in /usr/local/lib/python3.6/dist-packages (from pmdarima) (53.0.0)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->pmdarima) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->pmdarima) (2.8.1)\n",
+            "Requirement already satisfied: patsy>=0.5 in /usr/local/lib/python3.6/dist-packages (from statsmodels!=0.12.0,>=0.11->pmdarima) (0.5.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.7.3->pandas>=0.19->pmdarima) (1.15.0)\n",
+            "Installing collected packages: Cython, statsmodels, pmdarima\n",
+            "  Found existing installation: Cython 0.29.21\n",
+            "    Uninstalling Cython-0.29.21:\n",
+            "      Successfully uninstalled Cython-0.29.21\n",
+            "  Found existing installation: statsmodels 0.10.2\n",
+            "    Uninstalling statsmodels-0.10.2:\n",
+            "      Successfully uninstalled statsmodels-0.10.2\n",
+            "Successfully installed Cython-0.29.17 pmdarima-1.8.0 statsmodels-0.12.2\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "statsmodels"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_gbrzA7npVjJ"
+      },
+      "source": [
+        "from pmdarima.arima.utils import ndiffs"
+      ],
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DAiFy_GFp7Fz",
+        "outputId": "a4d73015-bd55-423e-e17b-8ca02a478f48"
+      },
+      "source": [
+        "ndiffs(df['Sales'],test='adf')"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
     },
     {
       "cell_type": "markdown",
