--- a/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
+++ b/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
@@ -6,7 +6,7 @@
       "name": "ARIMA-And-Seasonal-ARIMA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBAef7OfbHa+9bU/TfH0aM",
+      "authorship_tag": "ABX9TyPe0fmd0v5LXDCohbi8d0jo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "import matplotlib.pyplot as plt\r\n",
         "%matplotlib inline"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "source": [
         "df=pd.read_csv('https://raw.githubusercontent.com/gauravpks/dl-repo/master/RNN/perrin-freres-monthly-champagne-.csv')"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
         "df.columns=[\"Month\",\"Sales\"]\r\n",
         "df.head()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +267,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +351,7 @@
         "df.drop(106,axis=0,inplace=True)\r\n",
         "df.drop(105,axis=0,inplace=True)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
         "# Convert Month into Datetime\r\n",
         "df['Month']=pd.to_datetime(df['Month'])"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
       "source": [
         "df.set_index('Month',inplace=True)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,7 +390,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +477,7 @@
         "#Visualize the Data\r\n",
         "df.plot()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
         "\r\n",
         "from statsmodels.tsa.stattools import adfuller"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +563,7 @@
       "source": [
         "test_result=adfuller(df['Sales'])"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
         "    else:\r\n",
         "        print(\"weak evidence against null hypothesis, time series has a unit root, indicating it is non-stationary \")"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
       "source": [
         "adfuller_test(df['Sales'])"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +632,7 @@
       "source": [
         "df['Seasonal First Difference']=df['Sales']-df['Sales'].shift(12)"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -648,7 +648,7 @@
       "source": [
         "df.head(36)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -965,7 +965,7 @@
         "## Again test dickey fuller test\r\n",
         "adfuller_test(df['Seasonal First Difference'].dropna())"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -993,7 +993,7 @@
       "source": [
         "df['Seasonal First Difference'].plot()"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,7 @@
         "plt.show()\r\n",
         "#p value:  1-- value comming in the boundry"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1100,9 +1100,9 @@
         "* For an MA model, the theoretical PACF does not shut off, but instead tapers toward 0 in some manner. A clearer pattern for an MA model is in the ACF. The ACF will have non-zero autocorrelations only at lags involved in the model.\r\n",
         "\r\n",
         "**p,d,q p**\r\n",
-        "1. p - AR Model Lag/order\r\n",
+        "1. p - AR Model Lag/order -PACF\r\n",
         "2. d - order of differencing to make time series stationary\r\n",
-        "3. q - Moving Average Lag/order\r\n"
+        "3. q - Moving Average Lag/order--ACF\r\n"
       ]
     },
     {
@@ -1113,7 +1113,7 @@
       "source": [
         "from statsmodels.graphics.tsaplots import plot_acf,plot_pacf # auto colreation and partial auto corelation"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1124,7 +1124,7 @@
       "source": [
         "import statsmodels.api as sm"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1144,7 +1144,7 @@
         "ax2 = fig.add_subplot(212)\r\n",
         "fig = sm.graphics.tsa.plot_pacf(df['Seasonal First Difference'].dropna(),lags=40,ax=ax2)"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1177,11 +1177,11 @@
       },
       "source": [
         "# For non-seasonal data\r\n",
-        "#p=1, d=1, q= 0 or 1\r\n",
-        "# d= 1-- we did one time seasonal differencing\r\n",
+        "#p=1, d=1, q= 1\r\n",
+        "# d= 1-- we did one time seasonal differencing.. one year as 1\r\n",
         "from statsmodels.tsa.arima_model import ARIMA ## Whill only work when your data is not seasonal"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1196,7 +1196,7 @@
       "source": [
         "!pip install pmdarima"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1228,7 +1228,7 @@
       "source": [
         "from pmdarima.arima.utils import ndiffs"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1243,7 +1243,7 @@
       "source": [
         "ndiffs(df['Sales'],test='adf') #generally between 0,1,2 max.."
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1282,7 +1282,7 @@
         "model=ARIMA(df['Sales'],order=(1,1,1))\r\n",
         "model_fit=model.fit()"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,7 +1309,7 @@
       "source": [
         "model_fit.summary()"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1415,7 +1415,7 @@
         "df['forecast']=model_fit.predict(start=90,end=103,dynamic=True)\r\n",
         "df[['Sales','forecast']].plot(figsize=(12,8))"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1466,7 +1466,7 @@
         "model=sm.tsa.statespace.SARIMAX(df['Sales'],order=(1, 1, 1),seasonal_order=(1,1,1,12))\r\n",
         "results=model.fit()"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1492,7 +1492,7 @@
         "df['forecast']=results.predict(start=90,end=103,dynamic=True)\r\n",
         "df[['Sales','forecast']].plot(figsize=(12,8))"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1530,7 +1530,7 @@
         "from pandas.tseries.offsets import DateOffset\r\n",
         "future_dates=[df.index[-1]+ DateOffset(months=x)for x in range(0,24)]"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1541,7 +1541,7 @@
       "source": [
         "future_datest_df=pd.DataFrame(index=future_dates[1:],columns=df.columns)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1557,7 +1557,7 @@
       "source": [
         "future_datest_df.tail()"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1645,7 @@
       "source": [
         "future_df=pd.concat([df,future_datest_df])"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1662,7 +1662,7 @@
         "future_df['forecast'] = results.predict(start = 104, end = 120, dynamic= True)  \r\n",
         "future_df[['Sales', 'forecast']].plot(figsize=(12, 8))"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1705,7 +1705,7 @@
         "residuals = pd.DataFrame(model_fit.resid)\r\n",
         "residuals.plot()"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1747,7 +1747,7 @@
       "source": [
         "residuals.plot(kind='kde')"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1789,7 +1789,7 @@
       "source": [
         "residuals.describe()"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
